--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,4 @@
 
 <h1>{{myNumber}}</h1>
 
-<button>Please Click for Count</button>
+<button  (click)='myCountButton()' >Please Click for Count</button>
